--- a/azure-mgmt-devices/pom.xml
+++ b/azure-mgmt-devices/pom.xml
@@ -11,12 +11,12 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.microsoft.azure</groupId>
-        <artifactId>azure-parent</artifactId>
-        <version>1.7.1-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
+        <artifactId>azure-lite-parent</artifactId>
+        <version>1.7.0</version>
+        <relativePath>../pom-lite.xml</relativePath>
     </parent>
     <artifactId>azure-mgmt-devices</artifactId>
-  <version>1.7.1-beta-SNAPSHOT</version>
+    <version>1.7.0-beta</version>
     <packaging>jar</packaging>
     <name>Microsoft Azure SDK for Devices Management</name>
     <description>This package contains Microsoft Devices Management SDK.</description>
@@ -51,7 +51,6 @@
         <dependency>
             <groupId>com.microsoft.azure</groupId>
             <artifactId>azure-mgmt-resources</artifactId>
-            <version>1.7.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
