--- a/azure-mgmt-scheduler/pom.xml
+++ b/azure-mgmt-scheduler/pom.xml
@@ -7,14 +7,14 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>com.microsoft.azure</groupId>
-    <artifactId>azure-parent</artifactId>
-    <version>1.7.1-SNAPSHOT</version>
-    <relativePath>../pom.xml</relativePath>
+    <artifactId>azure-lite-parent</artifactId>
+    <version>1.7.0</version>
+    <relativePath>../pom-lite.xml</relativePath>
   </parent>
 
   <artifactId>azure-mgmt-scheduler</artifactId>
   <packaging>jar</packaging>
-  <version>1.7.1-beta-SNAPSHOT</version>
+  <version>1.7.0-beta</version>
 
   <name>Microsoft Azure SDK for Scheduler Management</name>
   <description>This package contains Microsoft Azure Sche Management SDK.</description>
@@ -54,7 +54,6 @@
     <dependency>
       <groupId>com.microsoft.azure</groupId>
       <artifactId>azure-mgmt-resources</artifactId>
-      <version>1.7.1-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
