--- a/azure-mgmt-datalake-store/pom.xml
+++ b/azure-mgmt-datalake-store/pom.xml
@@ -20,6 +20,18 @@
   <description>This package contains Microsoft Azure Data Lake Store Management SDK.</description>
   <url>https://github.com/Azure/azure-sdk-for-java</url>
 
+  <repositories>
+    <repository>
+      <id>data-local</id>
+      <name>data</name>
+      <url>file://${project.basedir}/../tools/testjar-repo</url>
+      <snapshots>
+        <enabled>true</enabled>
+        <updatePolicy>always</updatePolicy>
+      </snapshots>
+    </repository>
+  </repositories>
+
   <licenses>
     <license>
       <name>The MIT License (MIT)</name>
@@ -65,13 +77,13 @@
       <artifactId>azure-client-authentication</artifactId>
       <scope>test</scope>
     </dependency>
-    <!--<dependency>-->
-      <!--<groupId>com.microsoft.azure</groupId>-->
-      <!--<artifactId>azure-mgmt-resources</artifactId>-->
-      <!--<version>1.7.1-SNAPSHOT</version>-->
-      <!--<type>test-jar</type>-->
-      <!--<scope>test</scope>-->
-    <!--</dependency>-->
+    <dependency>
+      <groupId>com.microsoft.azure</groupId>
+      <artifactId>azure-mgmt-resources</artifactId>
+      <version>1.7.1-SNAPSHOT</version>
+      <type>test-jar</type>
+      <scope>test</scope>
+    </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-simple</artifactId>
